Fixed logica log in